# lmi

./: .gitignore  CMakeLists.txt  Makefile  README.md  README_install.md
.github/workflows/: macos.yml  pre-commit.yml  ubuntu.yml  windows.yml
app/: CMakeLists.txt  main.cc
include/: CMakeLists.txt
include/lmi/: api.h  client.h  lmi.h  validationError.h
include/lmi/data/: openai-cc-validation.json
lmi/: CMakeLists.txt  action.cpp  action.h  main.cc  main.cpp
src/: CMakeLists.txt
src/lmi/: CMakeLists.txt  alt.h  base.h  exceptions.h  validator.cc  validator.h
tests/: CMakeLists.txt  DoSomething.cpp  DoSomething.h  main.cc  main.cpp
tests/data/: openAIResponse.json  weather.json
